--- a/style.css
+++ b/style.css
@@ -112,3 +112,50 @@ body{
 .navbar a:hover {
     text-decoration: underline;
 }
+
+
+
+@media (max-width: 600px) {
+    .card {
+        width: 90%;
+        padding: 30px 20px;
+        margin-top: 50px;
+    }
+
+    .search input {
+        padding: 10px 15px;
+        height: 50px;
+        font-size: 16px;
+    }
+
+    .search button {
+        width: 50px;
+        height: 50px;
+    }
+
+    .weather h1 {
+        font-size: 60px;
+    }
+
+    .weather h2 {
+        font-size: 35px;
+    }
+
+    .details {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .col {
+        flex-direction: row;
+        justify-content: flex-start;
+        width: 100%;
+    }
+
+    .navbar {
+        font-size: 12px;
+        padding: 8px 0;
+    }
+}
+
